refactor(RacingServiceImpl): 코드를 간결하게 표현하기 위해 수정
- for 루프 대신 스트림을 통해 로직을 구현하도록 수정
- 복잡성을 올리는 메서드 삭제